Correccion de imports y tipos de status